<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/top_background"
    android:orientation="vertical"
    tools:context=".LoginPage">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="220dp"
        android:layout_height="196dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="136dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/e1"
        tools:srcCompat="@drawable/e1" />

    <EditText
        android:id="@+id/e3"
        android:layout_width="186dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:drawableLeft="@drawable/baseline_password_24"
        android:drawablePadding="10dp"
        android:drawableTint="@color/black"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/Text_Color"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e4" />

    <EditText
        android:id="@+id/e4"
        android:layout_width="186dp"
        android:layout_height="58dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:drawableLeft="@drawable/baseline_phone_24"
        android:drawablePadding="10dp"
        android:drawableTint="@color/black"
        android:hint="@string/mobile_no"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/Text_Color"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/e3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="365dp"
        android:layout_height="87dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="9dp"

        android:fontFamily="@font/dancingscriptvariablefontwght"
        android:text="@string/feel_the_meel_by_byriyani_wheel"
        android:textAlignment="center"
        android:textColor="@color/Text_Color"
        android:textSize="34dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.389"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button"
        android:layout_width="153dp"
        android:layout_height="49dp"
        android:layout_marginStart="129dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="129dp"

        android:backgroundTint="@color/Text_Color"
        android:text="@string/login"
        android:textColor="@color/Moron"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="199dp"
        android:layout_height="49dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/dancingscriptvariablefontwght"
        android:text="@string/login_sign"
        android:textAlignment="center"
        android:textColor="@color/Text_Color"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/e4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="80dp"
        android:layout_height="29dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="38dp"
        android:autoLink="web"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/Text_Color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="or login with"
        android:textColor="@color/Text_Color"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.108" />

    <Button
        android:id="@+id/button2"
        android:layout_width="94dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"

        android:layout_marginBottom="6dp"
        android:backgroundTint="@color/Text_Color"
        android:text="google"
        android:textColor="@color/Moron"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/Text_Color"
        android:text="facebook"
        android:textColor="@color/Moron"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>