<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/top_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="201dp"
        android:layout_height="178dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="136dp"

        android:layout_marginBottom="14dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/e1"
        tools:srcCompat="@drawable/e1" />

    <EditText
        android:id="@+id/e3"
        android:layout_width="186dp"
        android:layout_height="58dp"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="2dp"
        android:drawableLeft="@drawable/baseline_password_24"
        android:drawablePadding="10dp"
        android:drawableTint="@color/black"
        android:hint="@string/enter_password"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/Text_Color"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/e4" />

    <EditText
        android:id="@+id/e4"
        android:layout_width="186dp"
        android:layout_height="58dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="9dp"
        android:drawableLeft="@drawable/baseline_phone_24"
        android:drawablePadding="10dp"
        android:drawableTint="@color/black"
        android:hint="@string/enter_mobile_no"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/Text_Color"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="360dp"
        android:layout_height="82dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="22dp"

        android:layout_marginBottom="11dp"
        android:fontFamily="@font/dancingscriptvariablefontwght"
        android:text="feel the meel\nby byriyani wheel"
        android:textAlignment="center"
        android:textColor="@color/Text_Color"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="153dp"
        android:layout_height="49dp"
        android:layout_marginStart="129dp"
        android:layout_marginTop="2dp"

        android:layout_marginEnd="129dp"
        android:layout_marginBottom="112dp"
        android:backgroundTint="@color/Button"
        android:text="@string/sign_up_1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="199dp"
        android:layout_height="49dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="55dp"
        android:fontFamily="@font/dancingscriptvariablefontwght"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/Text_Color"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/baseline_account_circle_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="Name"
        android:minHeight="48dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/Text_Color"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/e4"
        app:layout_constraintEnd_toEndOf="@+id/e4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/e4"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingLeft="40dp"
        android:textColor="@color/Text_Color"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/e3"
        app:layout_constraintEnd_toEndOf="@+id/e3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/e3"
        app:layout_constraintTop_toBottomOf="@+id/e4"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="93dp"
        android:text="or sign up with"
        android:textColor="@color/Text_Color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="78dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="37dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="35dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>